# spec-driven-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/development-guidelines/: SKILL.md  template.md
.claude/skills/development-guidelines/guides/: implementation.md  process.md
.claude/skills/react-frontend/: SKILL.md  add-feature.md  patterns.md
.claude/skills/snowflake-agents/: SKILL.md  architecture.md  setup.md
.devcontainer/: devcontainer.json
.steering/20260707-react-frontend-support/: design.md  requirements.md  tasklist.md
.steering/20260708-api-connection-example/: design.md  requirements.md  tasklist.md
.steering/20260708-snowflake-agents-backend/: design.md  requirements.md  tasklist.md
backend/: .env.example  README.md  pyproject.toml
backend/src/backend/: config.py  main.py
backend/src/backend/cortex/: client.py
backend/src/backend/routers/: agent.py  tasks.py
backend/tests/: test_agent_api.py  test_cortex_client.py  test_tasks_api.py
docs/ideas/: README.md  next-steps.md
frontend/: .env.example  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: home-page.tsx  providers.tsx  query-client.ts  root-layout.tsx  router.tsx
frontend/src/features/tasks/: api.ts  routes.tsx  store.test.ts  store.ts  types.ts
frontend/src/features/tasks/components/: task-form.test.tsx  task-form.tsx  task-list.test.tsx  task-list.tsx  tasks-page.tsx
frontend/src/lib/: api-client.ts
frontend/src/mocks/: browser.ts  handlers.ts  server.ts
frontend/src/test/: setup.ts
snowflake/agents/: 20_sub_agents.sql  21_agent_udfs.sql  22_master_agent.sql
snowflake/sample/: 10_sample_data.sql  11_semantic_view.sql  12_search_service.sql
snowflake/setup/: 00_infra.sql  01_agent_access.sql
