[project]
name = "backend"
version = "0.1.0"
description = "Cortex AgentsへのBFF(Backend for Frontend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0.14",
    "mypy>=1.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "S", "N", "RUF"]
# 日本語コメント・docstring中の全角記号を誤検知するため無効化
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
exclude = ["\\.venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
